# Copyright 2002 Thijmen Klok <thijmen@id3lib.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = Sample

EXTRA_DIST = EnumFields.cpp \
EnumFields.h   \
ID3COM.def     \
ID3COM.rc      \
ID3COMps.def   \
ID3COMps.mk    \
ID3Field.cpp   \
ID3Field.h     \
ID3Field.rgs   \
ID3Frame.cpp   \
ID3Frame.h     \
ID3Frame.rgs   \
ID3Tag.cpp     \
ID3Tag.h       \
ID3Tag.rgs     \
StdAfx.cpp     \
StdAfx.h       \
dlldata.c      \
id3com.cpp     \
id3com.dsp     \
id3com.dsw     \
id3com.idl     \
resource.h     \
win32.readme.first.txt

